Squishy Bug banner

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1750,13 +1750,13 @@ footer {
 }
 .hero-v1-content .banner-quickly-thumb {
   border-radius: 300px;
-  border: 4px solid var(--white);
+  border: 4px solid aliceblue;
 }
 .hero-v1-content .banner-quickly-thumb img {
-  border-radius: 190px;
+  border-radius: 1000px;
   width: 100%; 
-    max-width: 1442px; 
-    max-height: 360px; 
+    max-width: 1584px; 
+    height: auto; 
 }
 .hero-v1-content .hero-arrow {
   width: 150px;
@@ -1866,6 +1866,7 @@ footer {
     margin-top: -17px;
   }
 }
+
 
 .hero-section-version2 {
   padding: 190px 2px 130px;
@@ -8168,7 +8169,11 @@ input.main-search-input::placeholder {
   opacity: 1;
 }
 
-  
+
+.brand-image2 {
+  width: 420px;
+ height: 420px;
+}
 
 
 .array-button {
